# WindAgent

./: .gitignore  README.md  ban_ke_hoach.md  phase12.md
apps/backend/: .gitignore  README.md  main.py  pyproject.toml
apps/backend/db/: __init__.py  database.py  models.py
apps/backend/routers/: agent_s3.py  health.py  models.py  permissions.py  sessions.py  tools.py  websocket.py  workflow.py
apps/backend/schemas/: event.py  session.py  workflow.py
apps/backend/services/: agent_s3_action_translator.py  agent_s3_adapter.py  agent_s3_config.py  agent_s3_health.py  agent_s3_step_executor.py  event_bus.py  event_hooks.py  gui_adapter.py  gui_grounding.py  model_client.py  permission_service.py  planner_service.py  session_service.py  tool_executor.py  tool_registry.py  workflow_runner.py  workflow_service.py
apps/backend/tests/: conftest.py  test_agent_s3_action_translator.py  test_agent_s3_adapter_mock.py  test_agent_s3_config.py  test_agent_s3_health.py  test_agent_s3_runner_wiring.py  test_agent_s3_secret_scrubbing.py  test_agent_s3_step_executor.py  test_api.py  test_click_target.py  test_db_persistence.py  test_event_bus.py  test_event_jsonl.py  test_gui_grounding.py  test_model_client.py  test_models_api.py  test_permission_service.py  test_permission_timeout_cancellation.py  test_permissions_api.py  test_planner_service.py  test_session_service.py  test_tool_executor.py  test_tool_registry.py  test_tools_api.py  test_websocket.py  test_workflow_runner.py  test_workflow_service.py
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: agent_s3_integration.md  (+7 more)
(+61 files in other folders)
