[project]
name = "windagent-backend"
version = "0.3.0"
description = "Local Desktop AI Agent - FastAPI sidecar (Phase 3 MVP)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx-ws>=0.9.0",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
]
