[package]
name = "windagent-desktop"
version = "0.6.0"
description = "WindAgent desktop shell"
authors = ["WindAgent contributors"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "windagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
